# tasklite

./: Cargo.toml  readme.md
src/: lib.rs  main.rs
src/app/: mod.rs
src/tasks/: display.rs  mod.rs  task.rs  task_manager.rs
