[package]
name = "tasklite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#  https://github.com/clap-rs/clap
clap = { version = "4.4.18", features = ["derive"] }

# https://github.com/serde-rs/serde
serde = { version = "1.0.196", features = ["derive"] }

# https://github.com/phsym/prettytable-rs
prettytable-rs = "0.10.0"

# https://docs.rs/colored/latest/colored/
colored = "2.1.0" 

chrono = "0.4.33"
dirs = "5.0.1"
serde_json = "1.0.112"

